--- a/links/input.css
+++ b/links/input.css
@@ -1,12 +1,9 @@
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600&display=swap');
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
 /* Import Google font - Poppins */
-@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600&display=swap');
 * {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
   font-family: 'Poppins', sans-serif;
 }
 
@@ -21,6 +18,6 @@
     @apply  text-2xl  hover:text-white
   }
   .link_card{
-    @apply flex justify-between items-center w-full bg-zinc-50  dark:bg-gray-600/30  rounded-md px-4 py-2 shadow-md hover:shadow-lg transition-colors duration-300 hover:text-white
+    @apply flex justify-between items-center w-full bg-zinc-50  dark:bg-gray-600/30  rounded-md p-4  shadow-md hover:shadow-lg transition-colors duration-300 hover:text-white
   }
 }
