--- a/links/input.css
+++ b/links/input.css
@@ -18,6 +18,6 @@
     @apply  text-2xl  hover:text-white
   }
   .link_card{
-    @apply flex justify-between items-center w-full bg-zinc-50  dark:bg-gray-600/30  rounded-full px-5 py-2 lg:px-6 hover:scale-105 duration-500  shadow-md hover:shadow-lg transition-all  hover:text-white
+    @apply flex justify-between items-center w-full bg-stone-50  dark:bg-gray-600/30  rounded-full px-5 py-2 lg:px-6 hover:scale-105 duration-500  shadow-md hover:shadow-lg transition-all  hover:text-white
   }
 }
